CI code changes

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,3 +17,5 @@ spec:
       containers:
       - name: python
         image: mbarathtrainer/docker-private:v3.0
+      imagePullSecrets:
+      - name: regcred
